syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "io/harness/perpetualtask/perpetual_task.proto";

message PerpetualTaskClientContextDetails {
  map<string, string> task_client_params = 1;
  google.protobuf.Timestamp last_context_updated = 2;
}

// TODO: define what is needed to make a callback to the client entry-point
message PerpetualTaskClientEntrypoint {
}